Внес правки по "Header"

--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -1,61 +1,3 @@
-.main-nav__toggle {
-  position: absolute;
-  top: 22px;
-  right: 20px;
-
-  width: 50px;
-  height: 22px;
-  padding: 0;
-  margin-left: auto;
-
-  background-color: transparent;
-  border: none;
-}
-.main-nav--closed .main-nav__toggle {
-  &::before {
-    content: "";
-
-    position: absolute;
-    left: 0;
-    top: 0;
-
-    width: 50px;
-    height: 4px;
-
-    background-color: #ffffff;
-    box-shadow: 0 9px 0 0 #ffffff, 0 18px 0 0 #ffffff;
-
-  }
-}
-.main-nav--opened .main-nav__toggle {
-  &::after,
-  &::before {
-    content: "";
-
-    position: absolute;
-    top: 10px;
-
-    width: 30px;
-    height: 3px;
-
-    background-color: #ffffff;
-  }
-  &::after {
-    transform: rotate(45deg);
-  }
-  &::before {
-    transform: rotate(-45deg);
-  }
-}
-.main-nav--closed .main-nav__list {
-  display: none;
-}
-.main-nav--opened .main-nav__list {
-  display: block;
-}
-.page-header--nojs .main-nav__list {
-  display: block;
-}
 .main-nav__list {
   margin: 0;
   padding: 0;
@@ -63,21 +5,113 @@
   list-style: none;
   background-color: @color-basic;
 }
-.main-nav__item {
-  padding: 15px;
-
-  text-align: center;
-
-  border-top: 1px solid #485461;
-  border-bottom: 1px solid #000000;
-}
 .main-nav__link {
+  position: relative;
+
+  display: block;
+
   font-size: 18px;
   line-height: 32px;
   font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
   color: #ffffff;
+  &[href]:hover,
+  &[href]:focus {
+    color: @color-hover;
+  }
+  &[href]:active {
+    color: #ffffff;
+    opacity: 0.3;
+  }
+  &--active {
+
+  }
+}
+@media (min-width: @mobile) and (max-width: @desktop) {
+  .main-nav__toggle {
+    position: absolute;
+    top: 22px;
+    right: 20px;
+
+    width: 50px;
+    height: 22px;
+    padding: 0;
+    margin-left: auto;
+
+    background-color: transparent;
+    border: none;
+  }
+  .main-nav--closed .main-nav__toggle {
+    &::before {
+      content: "";
+
+      position: absolute;
+      left: 0;
+      top: 0;
+
+      width: 50px;
+      height: 4px;
+
+      background-color: #ffffff;
+      box-shadow: 0 9px 0 0 #ffffff, 0 18px 0 0 #ffffff;
+    }
+    &:hover::before,
+    &:focus::before {
+      background-color: @color-hover;
+      box-shadow: 0 9px 0 0 @color-hover, 0 18px 0 0 @color-hover;
+    }
+    &:active::before {
+      opacity: 0.3;
+    }
+  }
+  .main-nav--opened .main-nav__toggle {
+    &::after,
+    &::before {
+      content: "";
+
+      position: absolute;
+      top: 10px;
+
+      width: 30px;
+      height: 3px;
+
+      background-color: #ffffff;
+    }
+    &::after {
+      transform: rotate(45deg);
+    }
+    &::before {
+      transform: rotate(-45deg);
+    }
+    &:hover::before,
+    &:hover::after,
+    &:focus::before,
+    &:focus::after {
+      background-color: @color-hover;
+    }
+    &:active::before,
+    &active::after {
+      opacity: 0.3;
+    }
+  }
+  .main-nav--closed .main-nav__list {
+    display: none;
+  }
+  .main-nav--opened .main-nav__list {
+    display: block;
+  }
+  .page-header--nojs .main-nav__list {
+    display: block;
+  }
+  .main-nav__item {
+    padding: 15px;
+
+    text-align: center;
+
+    border-top: 1px solid #485461;
+    border-bottom: 1px solid #000000;
+  }
 }
 @media (min-width: @tablet) {
   .main-nav__toggle {
@@ -85,6 +119,9 @@
   }
 }
 @media (min-width: @desktop) {
+  .main-nav {
+    padding-right: 130px;
+  }
   .main-nav__toggle {
     display: none;
   }
