--- a/less/style.less
+++ b/less/style.less
@@ -1,6 +1,8 @@
 @color-basic: #283645;
+@color-hover: #d22856;
 @tablet: 660px;
 @desktop: 1200px;
+@mobile: 320px;
 
 @import "global.less";
 @import "blocks/page-header.less";
