--- a/less/global.less
+++ b/less/global.less
@@ -18,9 +18,8 @@
 }
 
 body {
-  position: relative;
 
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
 
   font-family: "Open Sans", Arial sans-serif;
