--- a/less/style.less
+++ b/less/style.less
@@ -1,9 +1,14 @@
 @color-basic: #283645;
 @color-hover: #d22856;
 @tablet: 660px;
-@desktop: 1200px;
+@desktop: 1100px;
 @mobile: 320px;
+@retina-dpi: 144dpi;
+@retina-dppx: 1.5dppx;
 
 @import "global.less";
+@import "blocks/buttons.less";
+@import "blocks/available-systems.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
+@import "blocks/download-attachment.less";
