--- a/less/style.less
+++ b/less/style.less
@@ -12,3 +12,4 @@
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
 @import "blocks/download-attachment.less";
+@import "blocks/advantages.less";
