Добавил формат webp, оптимизировал svg, Стилизовал секцию "Effect"

--- a/less/blocks/advantages.less
+++ b/less/blocks/advantages.less
@@ -1,6 +1,8 @@
 .advantages {
   position: relative;
   z-index: 20;
+
+  background-image: linear-gradient(355deg, #f2f2f2 80%, #ffffff 20%, #ffffff 20%);
 }
 .advantages__text {
   width: 280px;
@@ -53,6 +55,7 @@
     margin-top: 0;
 
     border-top: 1px solid transparent;
+    background-image: linear-gradient(355deg, #f2f2f2 60%, #ffffff 40%, #ffffff 40%);
   }
   .advantages__text--1 {
     width: 620px;
@@ -81,7 +84,8 @@
     padding-bottom: 40px;
     margin-left: auto;
 
-    font-size: 16px;
+    font-size: 14px;
+    line-height: 22px;
     text-align: left;
     &:last-child {
       padding-bottom: 40px;
