--- a/less/style.less
+++ b/less/style.less
@@ -13,3 +13,4 @@
 @import "blocks/main-nav.less";
 @import "blocks/download-attachment.less";
 @import "blocks/advantages.less";
+@import "blocks/effect.less";
