--- a/less/style.less
+++ b/less/style.less
@@ -8,9 +8,13 @@
 
 @import "global.less";
 @import "blocks/buttons.less";
+@import "blocks/slider-control.less";
+@import "blocks/button-control.less";
 @import "blocks/available-systems.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
 @import "blocks/download-attachment.less";
 @import "blocks/advantages.less";
 @import "blocks/effect.less";
+@import "blocks/reviews.less";
+@import "blocks/price.less";
