Закончил стилизовать главную страницу

--- a/less/style.less
+++ b/less/style.less
@@ -11,6 +11,8 @@
 @import "blocks/slider-control.less";
 @import "blocks/button-control.less";
 @import "blocks/available-systems.less";
+@import "blocks/social.less";
+@import "blocks/developed.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
 @import "blocks/download-attachment.less";
@@ -18,3 +20,5 @@
 @import "blocks/effect.less";
 @import "blocks/reviews.less";
 @import "blocks/price.less";
+@import "blocks/contacts.less";
+@import "blocks/page-footer.less";
