Закончил стилизацию страницы "Form"

--- a/less/blocks/download-attachment.less
+++ b/less/blocks/download-attachment.less
@@ -37,6 +37,9 @@
     background-color: transparent;
     border-top: 1px solid transparent;
   }
+  .download-attachment__wrap__img picture {
+    vertical-align: top;
+  }
   .download-attachment__available-systems {
     margin-top: 45px;
   }
