--- a/less/blocks/form-progress.less
+++ b/less/blocks/form-progress.less
@@ -1,4 +1,4 @@
-.form__container {
+.form__container-progress {
   background-color: #f2f2f2;
   padding: 40px 0;
 }
@@ -24,12 +24,13 @@
   }
 }
 @media (min-width: @tablet) {
-  .form__container {
+  .form__container-progress {
     background-color: #ffffff;
     padding: 0;
+    order: 4;
   }
   .form__group-progress {
-    width: 560px;
+    width: 556px;
     margin: 0 auto;
     margin-top: 55px;
     padding-bottom: 50px;
@@ -41,7 +42,7 @@
   }
 }
 @media (min-width: @desktop) {
-  .form__container {
+  .form__container-progress {
     width: 100%;
   }
   .form__group-progress {
