--- a/less/style.less
+++ b/less/style.less
@@ -34,3 +34,8 @@
 @import "blocks/form-name.less";
 @import "blocks/form-progress.less";
 @import "blocks/form-contacts.less";
+@import "blocks/form-applications.less";
+@import "blocks/form-emotions.less";
+@import "blocks/form-button.less";
+@import "blocks/form-necessarily.less";
+@import "blocks/message-send.less";
