--- a/less/blocks/form-contacts.less
+++ b/less/blocks/form-contacts.less
@@ -15,9 +15,10 @@
 }
 @media (min-width: @tablet) {
   .form__group-contacts {
-    width: 500px;
+    width: 496px;
     margin-top: 55px;
     padding: 0 60px 35px;
+    order: 3;
 
     border: 2px solid #e5e5e5;
     & legend {
