--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -60,6 +60,7 @@
     height: 35px;
 
     border: 2px solid #e5e5e5;
+    background-color: #ffffff;
   }
   &:hover:after,
   &:focus:after {
@@ -72,6 +73,7 @@
     content: "";
 
     position: absolute;
+    z-index: 20;
     top: 0;
     left: 0;
 
@@ -91,19 +93,77 @@
 .form__checkbox:checked+label::after {
   border-color: @color-hover;
 }
+.form__radio {
+  position: absolute;
+  opacity: 0;
+}
+.form__radio+label {
+  position: relative;
+
+  display: block;
+  padding-left: 70px;
+
+  line-height: 39px;
+
+  cursor: pointer;
+  &::after {
+    content: "";
+
+    position: absolute;
+    left: 0;
+    top: 0;
+
+    width: 35px;
+    height: 35px;
+
+    border: 2px solid #e5e5e5;
+    border-radius: 50%;
+    background-color: #ffffff;
+  }
+  &:hover:after,
+  &:focus:after {
+    border-color: @color-basic;
+  }
+  &:active:after {
+    border-color: @color-hover;
+  }
+  &::before {
+    content: "";
+
+    position: absolute;
+    left: 12px;
+    top: 12px;
+    z-index: 20;
+
+    width: 15px;
+    height: 15px;
+
+    background-color: @color-hover;
+    border-radius: 50%;
+    opacity: 0;
+  }
+}
+.form__radio:checked+label::before {
+  opacity: 1;
+}
+.form__radio:checked+label::after {
+  border-color: @color-hover;
+}
 
 @media (min-width: @tablet) {
-
-
-}
-@media (min-width: @desktop) {
   .form {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 940px;
+    width: 620px;
     margin: 0 auto;
   }
 
-  
+}
+@media (min-width: @desktop) {
+  .form {
+    width: 940px;
+  }
+
+
 }
