--- a/less/global.less
+++ b/less/global.less
@@ -22,7 +22,7 @@ body {
   margin: 0;
   padding: 0;
 
-  font-family: "Open Sans", Arial sans-serif;
+  font-family: "Open Sans", Arial, sans-serif;
   font-style: normal;
   font-size: 14px;
   line-height: 30px;
