СТилизовал секцию "Photo"

--- a/work/less/style.less
+++ b/work/less/style.less
@@ -39,3 +39,4 @@
 @import "blocks/form-button.less";
 @import "blocks/form-necessarily.less";
 @import "blocks/message-send.less";
+@import "blocks/photo.less";
