--- a/work/css/style.css
+++ b/work/css/style.css
@@ -1884,3 +1884,71 @@ img {
     border-bottom: 1px solid transparent;
   }
 }
+.photo__title-wrap {
+  background-image: url("../img/back-mobile.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.photo__title {
+  width: 240px;
+  margin: 0 auto;
+  padding-top: 100px;
+  padding-bottom: 80px;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 300;
+  color: #ffffff;
+  text-align: center;
+}
+.photo__text {
+  width: 270px;
+  margin: 50px auto 50px;
+  font-size: 16px;
+  font-weight: 400;
+  text-align: center;
+}
+@media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+  .photo__title-wrap {
+    background-image: url("../img/back-mobile2x.jpg");
+  }
+}
+@media (min-width: 660px) {
+  .photo__title-wrap {
+    background-image: url("../img/back-tablet.jpg");
+  }
+  .photo__title {
+    width: 420px;
+    padding-top: 185px;
+    padding-bottom: 140px;
+    font-size: 50px;
+    line-height: 60px;
+  }
+  .photo__text {
+    width: 470px;
+    margin-top: 95px;
+    margin-bottom: 80px;
+    font-size: 18px;
+  }
+}
+@media (min-width: 660px) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 660px) and (min-resolution: 144dpi), (min-width: 660px) and (min-resolution: 1.5dppx) {
+  .photo__title-wrap {
+    background-image: url("../img/back-tablet2x.jpg");
+  }
+}
+@media (min-width: 1100px) {
+  .photo__title-wrap {
+    background-image: url("../img/back-desktop.jpg");
+  }
+  .photo__title {
+    padding-top: 175px;
+    padding-bottom: 95px;
+  }
+  .photo__text {
+    width: 620px;
+  }
+}
+@media (min-width: 1100px) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 1100px) and (min-resolution: 144dpi), (min-width: 1100px) and (min-resolution: 1.5dppx) {
+  .photo__title-wrap {
+    background-image: url("../img/back-desktop2x.jpg");
+  }
+}
