--- a/work/less/style.less
+++ b/work/less/style.less
@@ -40,3 +40,5 @@
 @import "blocks/form-necessarily.less";
 @import "blocks/message-send.less";
 @import "blocks/photo.less";
+@import "blocks/photo-wrap.less";
+@import "blocks/photo-download.less";
