--- a/work/css/style.css
+++ b/work/css/style.css
@@ -2,18 +2,21 @@
   font-weight: 300;
   font-family: "Open Sans";
   font-style: normal;
+  font-display: swap;
   src: url("fonts/OpenSans-Light.ttf") format("ttf");
 }
 @font-face {
   font-weight: 400;
   font-family: "Open Sans";
   font-style: normal;
+  font-display: swap;
   src: url("fonts/OpenSans-Regular.ttf") format("ttf");
 }
 @font-face {
   font-weight: 700;
   font-family: "Open Sans";
   font-style: normal;
+  font-display: swap;
   src: url("fonts/OpenSans-Bold.ttf") format("ttf");
 }
 body {
